// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard Footer (unit tests) when using required props and steps dont have errors should match the snapshot 1`] = `
<kv-wizard-footer cancel-enabled="" complete-btn-label="Submit" current-step="1" next-enabled="" prev-enabled="" progress-percentage="50" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard-footer-container">
      <div class="actions-container" part="footer-actions-container">
        <div class="wizard-stepper">
          <kv-step-bar currentstep="1" progresspercentage="50"></kv-step-bar>
        </div>
        <slot name="additional-actions"></slot>
      </div>
      <div class="buttons-container"></div>
    </div>
  </template>
</kv-wizard-footer>
`;

exports[`Wizard Footer (unit tests) when using required props and steps have errors should match the snapshot 1`] = `
<kv-wizard-footer cancel-enabled="" complete-btn-label="Submit" current-step="1" has-error="" next-enabled="" prev-enabled="" progress-percentage="50" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard-footer-container">
      <div class="actions-container" part="footer-actions-container">
        <div class="wizard-stepper">
          <kv-step-bar currentstep="1" haserror="" progresspercentage="50"></kv-step-bar>
        </div>
        <slot name="additional-actions"></slot>
      </div>
      <div class="buttons-container"></div>
    </div>
  </template>
</kv-wizard-footer>
`;
